# sqlparser

./: README.md  SQLParser.dsw  autogen.sh  buildall.dsp  configure.in
calc/: calc.dsp  calc_parse.h  parse.y  scan.l
conf/: sqltest.sql
include/: .cvsignore  Makefile.am  argcv.h  base64.h  des.h  event.h  getdate.h  hmac.h  list.h  log.h  md4.h  md5.h  ntserv.h  proto.h  sha1.h  sql.h  sql_conf.h  sql_driver.h  sql_node.h  sql_parser.h  utf16.h  utf8.h  uuid.h  vector.h
include/win32/: grp.h  pwd.h  shadow.h  syslog.h
lib/: Makefile.am
lib/cmn/: .cvsignore  Makefile.am  argcv.c  autoconf.h  base64.c  cmn.dsp  cmn.plg  crc.c  crc.h  des.c  dns.c  dns.h  getdate.c  getdate.y  getopt.c  hash.c  hmac.c  isaac.c  isaac.h  log.c  md4.c  md5.c  mkstemp.c  ntserv_func.c  ntserv_main.c  pwdgrp.c  rbtree.c  sha1.c  time.c  url.c  url.h  uuid.c  vector.c
lib/cmn/event/: .cvsignore  .cvswrappers  event.def  event.dsp  event.mc  event.rc
lib/sql/: .cvsignore  Makefile.am  alloca.c  config.c  driver.c  log.c  mssql.sql  mysql.c  mysql.sql  nodes.c  parse.y  pgsql.c  scan.l  sql.dsp  sql_priv.h  tds.c
src/sqltest/: .cvsignore  sqltest.c  sqltest.dsp
