include_HEADERS = \
	tds.h tdsbytes.h tds_configs.h tdsconvert.h \
	tdsiconv.h tdsstring.h tds_sysdep_private.h \
	tds_sysdep_public.h tdsthread.h tdsver.h \
	replacements.h

EXTRA_DIST = \
	win32 kconfig.h cgi_tag.h cgi_html.h \
	getline.h list.h vector.h proto.h \
	utf8.h utf16.h argcv.h log.h rbtree.h \
	sha1.h md4.h md5.h hmac.h des.h uuid.h base64.h \
	eps_sql.h eps_i18n.h eps_error.h eps_syntax.h \
	eps_radius.h eps_ldap.h eps_pkix.h eps_ssl.h \
	eps_dns.h eps_netif.h eps_proc.h \
	eps_acct.h eps_autz.h eps_time.h eps_conf.h \
	eps_syslog.h eps_elf.h eps_license.h \
	eps_util.h eps_config.h eps.h \
	rad_ldap.h rad_hash.h rad_token.h rad_conf.h \
	rad_pair.h rad_modcall.h rad_dict.h rad_files.h \
	rad_utmp.h rad_client.h rad_xlat.h rad_realm.h \
	rad_filters.h rad_modules.h rad_eap.h \
	ldap_ber.h ldap_avl.h ldap_list.h ldap_hash.h \
	ldap_slap.h ldap_syn.h ldap_ucdata.h ldap_utf.h \
	ldap_ldif.h ldap_log.h \
	sql_conf.h sql_driver.h sql_node.h sql_parser.h \
	syslogd.h radconf.h ldapconf.h sslca.h sql.h \
	tds_sysdep_public.h.in
